@@ -1,0 +1,14 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "L. W. Perner, G.-W. Truong, D. Follman, M. Prinz, G. Winkler, S. Puchegger, G. D. Cole, O. H. Heckl. Simultaneous measurement of mid-infrared refractive indices in thin-film heterostructures: Methodology and results for GaAs/AlGaAs, <a href=\"https://doi.org/10.1103/PhysRevResearch.5.033048\"><i>Phys. Rev. Res.</i> <b>5</b>, 033048 (2023)</a> (Data kindly provided by the authors)"
+COMMENTS: "Relative standard uncertainty ≤3.3×10<sup>-4</sup> over whole range. Measured in a high-purity GaAs/AlGaAs crystalline thin-film multilayer. Sample grown via molecular beam epitaxy on GaAs seed wafer (wafer treated as separate material). Optical measurements at 2.21 mbar and 22 °C. Data presented here uses single effective oscillator model. See original publication for details, including: (i) additional data with lower standard uncertainty, (ii) refractive index data for Al<sub>0.929</sub>Ga<sub>0.071</sub>As (interpolation for other alloy ratios possible)."
+DATA:
+  - type: formula 1
+    wavelength_range: 2.0 7.1
+    coefficients: 0 9.705183027405873 0.38586135365339097
+SPECS:
+    n_is_absolute: true
+    wavelength_is_vacuum: true
+    temperature: 22 °C
